--- a/.github/workflows/deploy-staging.yaml
+++ b/.github/workflows/deploy-staging.yaml
@@ -33,8 +33,7 @@ permissions:
 
 jobs:
   load-config:
-    uses: biomage-org/iac/.github/workflows/load-config.yaml@hms-merge
-    # uses: ./.github/workflows/load-config.yaml ## USE THIS WHEN MERGING IN MASTER
+    uses: ./.github/workflows/load-config.yaml
   deploy-staging:
     name: Deploy staging environment
     runs-on: ubuntu-20.04
