--- a/.github/workflows/remove-staging.yaml
+++ b/.github/workflows/remove-staging.yaml
@@ -15,8 +15,7 @@ permissions:
 
 jobs:
   load-config:
-    uses: biomage-org/iac/.github/workflows/load-config.yaml@hms-merge
-    # uses: ./.github/workflows/load-config.yaml ## USE THIS WHEN MERGING IN MASTER
+    uses: ./.github/workflows/load-config.yaml
   remove-staging:
     name: Remove staging environment
     runs-on: ubuntu-20.04
