--- a/.github/workflows/backup-cognito-users.yaml
+++ b/.github/workflows/backup-cognito-users.yaml
@@ -21,8 +21,8 @@ jobs:
     needs: load-config
     strategy:
       matrix:
-        environment-name: ${{fromJson(needs.load-config.outputs.environment_names)}}
-    environment: ${{ matrix.environment-name }}
+        environment_name: ${{fromJson(needs.load-config.outputs.environment_names)}}
+    environment: ${{ matrix.environment_name }}
     steps:
       - id: setup-node
         uses: actions/setup-node@v2
