--- a/cf/cognito-case-insensitive.yaml
+++ b/cf/cognito-case-insensitive.yaml
@@ -12,6 +12,8 @@ Parameters:
     Description: The environment for which the buckets need to be created.
   ReplyEmail:
     Type: String
+  UserPoolDomainName:
+    Type: String
 
 Outputs:
   UserPoolId:
@@ -22,7 +24,7 @@ Outputs:
     Description: Address to use to connect to Primary Cluster endpoint
     Value: !GetAtt UserPool.ProviderName
     Export:
-      Name: !Sub 'biomage-user-pool-case-insensitive-${Environment}::UserPoolProviderName' 
+      Name: !Sub 'biomage-user-pool-case-insensitive-${Environment}::UserPoolProviderName'
 
 Resources:
   SMSRole:
@@ -131,7 +133,7 @@ Resources:
     Type: AWS::Cognito::UserPoolDomain
     Properties:
       UserPoolId: !Ref UserPool
-      Domain: !Sub "biomage-auth-${Environment}-${AWS::AccountId}"
+      Domain: !Sub "${UserPoolDomainName}-${Environment}-${AWS::AccountId}"
 
   # Add permission to allow userpool to trigger lambda
   PostRegisterLambdaInvocationPermission:
