--- a/deployment-config.json
+++ b/deployment-config.json
@@ -24,6 +24,7 @@
                 "staging"
             ]
         },
+        "user_pool_domain_name": "biomage-auth",
         "excluded_services": [
             "cf/rds-agent-security-group.yaml",
             "cf/rds-subnet-security-group.yaml"
@@ -46,6 +47,7 @@
                 "production"
             ]
         },
+        "user_pool_domain_name": "hms-auth",
         "excluded_services": [
             "cf/ses.yaml",
             "cf/doit-cloudhealth-role.yaml",
