--- a/.github/workflows/load-config.yaml
+++ b/.github/workflows/load-config.yaml
@@ -164,7 +164,7 @@ jobs:
             {
               name: .key,
               type: .value[] | select(test($env_type)),
-              admins: .key as $dep | .value[] as $env | select(test($env_type)) | $CONFIG_FILE[$org].cluster_admins[$dep][$env]
+              admins: .[$org].cluster_admins[.key][.value[] | select(test($env_type))]
             }
           ]')
 
