--- a/.github/workflows/load-config.yaml
+++ b/.github/workflows/load-config.yaml
@@ -174,6 +174,7 @@ jobs:
       - name: Add admins to deployment matrix
         id: add-admins
         run: |
+          CONFIG_FILE=$(cat deployment-config.json | jq .)
           UPDATED_DEPLOYMENT_MATRIX=$(echo $CONFIG_FILE | jq -c --arg org "${{ github.repository_owner }}" --arg env_name "$ENV_NAME" --arg env_type "$ENV_TYPE" --argjson matrix "$DEPLOYMENT_MATRIX" '
             . as $config |
             $matrix |
