--- a/.github/workflows/load-config.yaml
+++ b/.github/workflows/load-config.yaml
@@ -169,12 +169,7 @@ jobs:
 
           echo "deployment_matrix=$DEPLOYMENT_MATRIX"
           echo "deployment_matrix=$DEPLOYMENT_MATRIX" >> $GITHUB_OUTPUT
-        shell: bash
 
-      - name: Add admins to deployment matrix
-        id: add-admins
-        run: |
-          CONFIG_FILE=$(cat deployment-config.json | jq .)
           UPDATED_DEPLOYMENT_MATRIX=$(echo $CONFIG_FILE | jq -c --arg org "${{ github.repository_owner }}" --arg env_name "$ENV_NAME" --arg env_type "$ENV_TYPE" --argjson matrix "$DEPLOYMENT_MATRIX" '
             . as $config |
             $matrix |
@@ -183,7 +178,7 @@ jobs:
             })
           ')
 
-          echo "deployment_matrix=$UPDATED_DEPLOYMENT_MATRIX"
-          echo "deployment_matrix=$UPDATED_DEPLOYMENT_MATRIX" >> $GITHUB_OUTPUT
-        shell: bash
+          echo "deployment_matrix_admins=$UPDATED_DEPLOYMENT_MATRIX"
+          echo "deployment_matrix_admins=$UPDATED_DEPLOYMENT_MATRIX" >> $GITHUB_OUTPUT
 
+        shell: bash
