Replace null with []

--- a/.github/workflows/load-config.yaml
+++ b/.github/workflows/load-config.yaml
@@ -174,7 +174,11 @@ jobs:
             . as $config |
             $matrix |
             map(. + {
-              admins: $config[$org].cluster_admins[.name][.type]
+              admins: if $config[$org].cluster_admins[.name][.type] != null then
+                $config[$org].cluster_admins[.name][.type]
+              else
+                []
+              end
             })
           ')
 
