Correct variable name

--- a/.github/workflows/load-config.yaml
+++ b/.github/workflows/load-config.yaml
@@ -167,9 +167,6 @@ jobs:
             }
           ]')
 
-          echo "deployment_matrix=$DEPLOYMENT_MATRIX"
-          echo "deployment_matrix=$DEPLOYMENT_MATRIX" >> $GITHUB_OUTPUT
-
           UPDATED_DEPLOYMENT_MATRIX=$(echo $CONFIG_FILE | jq -c --arg org "${{ github.repository_owner }}" --arg env_name "$ENV_NAME" --arg env_type "$ENV_TYPE" --argjson matrix "$DEPLOYMENT_MATRIX" '
             . as $config |
             $matrix |
@@ -178,8 +175,8 @@ jobs:
             })
           ')
 
-          echo "deployment_matrix_admins=$UPDATED_DEPLOYMENT_MATRIX"
-          echo "deployment_matrix_admins=$UPDATED_DEPLOYMENT_MATRIX" >> $GITHUB_OUTPUT
+          echo "deployment_matrix=$ADMIN_DEPLOYMENT_MATRIX"
+          echo "deployment_matrix=$ADMIN_DEPLOYMENT_MATRIX" >> $GITHUB_OUTPUT
 
         shell: bash
 
