--- a/.github/workflows/deploy-changed-users.yaml
+++ b/.github/workflows/deploy-changed-users.yaml
@@ -138,13 +138,14 @@ jobs:
       - id: update-identitymapping-admin
         name: Add cluster admin rights to everyone on the admin list.
         run: |-
-          echo "Reading cluster rights from file: infra/config/cluster/${{matrix.environment.name}}/cluster-admins-$CLUSTER_ENV"
-          while IFS= read -r user
-          do
+          echo "Setting cluster admin rights for ${{matrix.environment.name}} in ${{matrix.environment.type}} environment"
+          ADMINS="${{ join(matrix.environment.admins, ' ') }}"
+          echo $ADMINS
+          for user in $ADMINS; do
             echo "Adding cluster admin rights to $user"
             eksctl create iamidentitymapping \
               --cluster=biomage-$CLUSTER_ENV \
               --arn arn:aws:iam::${{ steps.setup-aws.outputs.aws-account-id }}:user/$user \
               --group system:masters \
               --username $user
-          done < "infra/config/cluster/${{matrix.environment.name}}/cluster-admins-$CLUSTER_ENV"
+          done
