--- a/.github/workflows/deploy-changed-users.yaml
+++ b/.github/workflows/deploy-changed-users.yaml
@@ -1,6 +1,5 @@
 name: Update infrastructure users on AWS
 on:
-  workflow_dispatch: {}
   push:
     branches:
       - master
@@ -20,8 +19,8 @@ jobs:
   load-config:
     uses: ./.github/workflows/load-config.yaml
     with:
-      environment_name: Biomage
-      environment_type: staging
+      environment_name: all
+      environment_type: staging and production
   check-secrets:
     name: Check if secrets are defined
     runs-on: ubuntu-20.04
