fix HMS cluster admin
Signed-off-by: Alex Pickering <alexvpickering@gmail.com>

--- a/deployment-config.json
+++ b/deployment-config.json
@@ -93,11 +93,11 @@
         "cluster_admins": {
             "HMS": {
                 "staging": [
-                    "alex_pickering",
+                    "alexvpickering",
                     "ci-users/testing/ci-user-testing"
                 ],
                 "production": [
-                    "alex_pickering",
+                    "alexvpickering",
                     "ci-users/testing/ci-user-testing"
                 ]
             }
