add ListUsers permissions to api
Signed-off-by: Alex Pickering <alexvpickering@gmail.com>

--- a/cf/irsa-api-role.yaml
+++ b/cf/irsa-api-role.yaml
@@ -209,6 +209,7 @@ Resources:
                   - "cognito-idp:DescribeUserPool"
                   - "cognito-idp:DescribeUserPoolClient"
                   - "cognito-idp:AdminGetUser"
+                  - "cognito-idp:ListUsers"
                 Resource: '*'
 
         - PolicyName: "can-access-rds"
