--- a/cf/delete-s3-file-lambda.yaml
+++ b/cf/delete-s3-file-lambda.yaml
@@ -49,7 +49,7 @@ Resources:
                   - Fn::Sub: "arn:aws:s3:::biomage-filtered-cells-${Environment}-${AWS::AccountId}"
                   - Fn::Sub: "arn:aws:s3:::processed-matrix-${Environment}-${AWS::AccountId}"
                   - Fn::Sub: "arn:aws:s3:::cell-sets-${Environment}-${AWS::AccountId}"
-                  - Fn::Sub: "arn:aws:s3:::cellenics-cell-level-metadata-${Environment}-${AWS::AccountId}/*"
+                  - Fn::Sub: "arn:aws:s3:::cellenics-cell-level-metadata-${Environment}-${AWS::AccountId}"
 
         - PolicyName: !Sub "can-create-log-group-in-cloudwatch-${Environment}"
           PolicyDocument:
