add worker timeout and scale to config
Signed-off-by: Alex Pickering <alexvpickering@gmail.com>

--- a/.github/workflows/deploy-infra.yaml
+++ b/.github/workflows/deploy-infra.yaml
@@ -496,6 +496,8 @@ jobs:
               .myAccount.publicFacing = strenv(PUBLIC_FACING) |
               .myAccount.acmCertificate = strenv(ACM_CERTIFICATE_ARN) |
               .myAccount.selfSignedCertificate = strenv(SELF_SIGNED_CERTIFICATE)
+              .myAccount.workerTimeout = strenv(WORKER_TIMEOUT)
+              .myAccount.workerScaleToZero = strenv(WORKER_SCALE_TO_ZERO)
             ' infra/config/account-config.yaml
 
           if [[ -n "${{ secrets.DATADOG_API_KEY }}" ]]
@@ -516,6 +518,8 @@ jobs:
           ACM_CERTIFICATE_ARN: ${{ steps.setup-domain.outputs.acm-certificate-arn }}
           PUBLIC_FACING: ${{ steps.platform-public-facing.outputs.result }}
           SELF_SIGNED_CERTIFICATE: ${{ steps.using-self-signed-certificate.outputs.result }}
+          WORKER_TIMEOUT: ${{ matrix.environment.worker_timeout }}
+          WORKER_SCALE_TO_ZERO: ${{ matrix.environment.worker_scale_to_zero }}
 
       - id: create-flux-namespace
         name: Attempt to create flux namespace
