--- a/.github/workflows/load-config.yaml
+++ b/.github/workflows/load-config.yaml
@@ -53,6 +53,9 @@ on:
       user_pool_domain_name:
         description: "The name of cognito user pool"
         value: ${{ jobs.setup.outputs.user_pool_domain_name }}
+      worker_timeout:
+        description: "Time in milliseconds before killing an idle worker pod"
+        value: ${{ jobs.setup.outputs.worker_timeout }}
       deployment_matrix:
         description: "All allowed combinations of environment name and environment type"
         value: ${{ jobs.generate-deployment-matrix.outputs.deployment_matrix }}
@@ -171,15 +174,17 @@ jobs:
             }
           ]')
 
-          ADMIN_DEPLOYMENT_MATRIX=$(echo $CONFIG_FILE | jq -c --arg org "${{ github.repository_owner }}" --arg env_name "$ENV_NAME" --arg env_type "$ENV_TYPE" --argjson matrix "$DEPLOYMENT_MATRIX" '
+          DEPLOYMENT_CONFIG_MATRIX=$(echo $CONFIG_FILE | jq -c --arg org "${{ github.repository_owner }}" --arg env_name "$ENV_NAME" --arg env_type "$ENV_TYPE" --argjson matrix "$DEPLOYMENT_MATRIX" '
             . as $config |
             $matrix |
             map(. + {
-              admins: ($config[$org].cluster_admins[.name][.type] // [])
+              admins: ($config[$org].cluster_admins[.name][.type] // []),
+              worker_timeout: ($config[$org].worker_timeout[.name][.type] // ""),
+              worker_scale_to_zero: ($config[$org].worker_scale_to_zero[.name][.type] // "false"),
             })
           ')
 
-          echo "deployment_matrix=$ADMIN_DEPLOYMENT_MATRIX"
-          echo "deployment_matrix=$ADMIN_DEPLOYMENT_MATRIX" >> $GITHUB_OUTPUT
+          echo "deployment_matrix=$DEPLOYMENT_CONFIG_MATRIX"
+          echo "deployment_matrix=$DEPLOYMENT_CONFIG_MATRIX" >> $GITHUB_OUTPUT
 
         shell: bash
