--- a/charts/nodejs/templates/scale-pods-right-to-api.yaml
+++ b/charts/nodejs/templates/scale-pods-right-to-api.yaml
@@ -1,4 +1,4 @@
-{{ if (contains "api" .Values.biomageCi.repo) }}
+{{ if and (contains "api" .Values.biomageCi.repo) (eq .Values.myAccount.workerScaleToZero "true") }}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
