testing worker timeout
Signed-off-by: Alex Pickering <alexvpickering@gmail.com>

--- a/deployment-config.json
+++ b/deployment-config.json
@@ -117,6 +117,7 @@
                     "worker_scale_to_zero": "true"
                 },
                 "staging": {
+                    "worker_timeout": "2400",
                     "worker_scale_to_zero": "true"
                 }
             }
